implementation of win/lose logic, bit of work on displaying the result

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <button class="field" data-index="7"></button>
                 <button class="field" data-index="8"></button>
             </div>
+            <span id="result"></span>
             <button id="restart-button">RESTART</button>
         </div>
     </body>
