worked on the UI, fixed bug with not displaying the score after the first reset

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <header>
-        TIC TAC TOE
+        <strong>TIC TAC TOE</strong>
     </header>
     <body>
         <div class="content">
@@ -29,7 +29,7 @@
                 <button class="field" data-index="8"></button>
             </div>
             <span id="result"></span>
-            <button id="restart-button">RESTART</button>
+            <button id="restart-button"><strong>RESTART</strong></button>
         </div>
     </body>
     <script src="script.js"></script>
